--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+mat-toolbar, mat-card, aside, nav, mat-nav-list {
+  box-shadow: none !important;
+  border: none !important;
+  border-radius: 0 !important;
+}
