更新專案名稱為 "primeng-quickstart"，調整 angular.json 和 package.json 配置，移除不必要的元件與樣式，並整合 PrimeNG 相關設定以提升專案的功能性與一致性。

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,2 @@
-mat-toolbar, mat-card, aside, nav, mat-nav-list {
-  box-shadow: none !important;
-  border: none !important;
-  border-radius: 0 !important;
-}
+@use './tailwind.css';
+@use "primeicons/primeicons.css";
