--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,7 @@
 >
   <app-topbar />
   <div class="flex flex-col w-full max-w-7xl mx-auto gap-6 flex-1">
-    <stats-widget />
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <sales-trend-widget />
-      <recent-activity-widget />
-    </div>
-    <product-overview-widget />
+    <router-outlet></router-outlet>
   </div>
   <app-footer />
 </div>
