--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   class="bg-surface-50 dark:bg-surface-950 min-h-screen p-8 flex flex-col gap-6"
 >
   <app-topbar />
+  <p-toast></p-toast>
   <div class="flex flex-col w-full max-w-7xl mx-auto gap-6 flex-1">
     <router-outlet></router-outlet>
   </div>
