--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 >
   <app-topbar />
   <p-toast></p-toast>
-  <div class="flex flex-col w-full max-w-7xl mx-auto gap-6 flex-1">
+  <div class="flex flex-col w-full max-w-7xl mx-auto gap-6 flex-1 h-full">
     <router-outlet></router-outlet>
   </div>
   <app-footer />
