--- a/src/app/components/contract/contract.component.scss
+++ b/src/app/components/contract/contract.component.scss
@@ -1,4 +1,9 @@
-/* 可留空，或加一點 Splitter 高度樣式 */
+:host {
+  display: block;
+  height: 100%;
+}
+
 :host ::ng-deep .p-splitter {
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
