--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -1,21 +1,32 @@
-<!-- 測試時可先移除 ngIf，確保 Splitter 一定顯示 -->
-<p-splitter style="width: 100%; height: 100%;">
-    <ng-template pSplitterPanel [size]="30">
-      <div class="flex flex-col items-center justify-center h-full gap-2">
-        <div class="text-lg font-bold">Panel 1 (左 30%)</div>
-        <div>這是左側內容</div>
-      </div>
-    </ng-template>
-    <ng-template pSplitterPanel [size]="40">
-      <div class="flex flex-col items-center justify-center h-full gap-2">
-        <div class="text-lg font-bold">Panel 2 (中 40%)</div>
-        <div>這是中間內容</div>
-      </div>
-    </ng-template>
-    <ng-template pSplitterPanel [size]="30">
-      <div class="flex flex-col items-center justify-center h-full gap-2">
-        <div class="text-lg font-bold">Panel 3 (右 30%)</div>
-        <div>這是右側內容</div>
-      </div>
-    </ng-template>
-  </p-splitter>
+<ng-container *ngIf="!loading; else loadingTpl">
+  <ng-container *ngIf="user; else loginTpl">
+    <!-- Splitter 在 user && !loading 時顯示 -->
+    <p-splitter style="width: 100%; height: 100%;">
+      <ng-template pSplitterPanel [size]="30">
+        <div class="flex flex-col items-center justify-center h-full gap-2">
+          <div class="text-lg font-bold">Panel 1 (左 30%)</div>
+          <div>這是左側內容</div>
+        </div>
+      </ng-template>
+      <ng-template pSplitterPanel [size]="40">
+        <div class="flex flex-col items-center justify-center h-full gap-2">
+          <div class="text-lg font-bold">Panel 2 (中 40%)</div>
+          <div>這是中間內容</div>
+        </div>
+      </ng-template>
+      <ng-template pSplitterPanel [size]="30">
+        <div class="flex flex-col items-center justify-center h-full gap-2">
+          <div class="text-lg font-bold">Panel 3 (右 30%)</div>
+          <div>這是右側內容</div>
+        </div>
+      </ng-template>
+    </p-splitter>
+  </ng-container>
+</ng-container>
+
+<ng-template #loadingTpl>
+  <p-progressSpinner class="flex justify-center m-4"></p-progressSpinner>
+</ng-template>
+<ng-template #loginTpl>
+  <p class="text-center text-lg mt-4">請先登入才能查看合約</p>
+</ng-template>
