--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-surface-50 dark:bg-surface-950 h-screen p-8 flex flex-col gap-6"
+  class="bg-surface-50 dark:bg-surface-950 min-h-screen p-8 flex flex-col gap-6"
 >
   <app-topbar />
   <p-toast></p-toast>
