整合 PrimeNG 的 FileUpload 模組至共享模組，提升檔案上傳功能的可用性與用戶體驗。

--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -1,4 +1,7 @@
 <!-- 測試時可先移除 ngIf，確保 Splitter 一定顯示 -->
+<p-toast />
+<p-fileupload #fu mode="basic" chooseLabel="Choose" chooseIcon="pi pi-upload" name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onUpload($event)" />
+<p-button label="Upload" (onClick)="fu.upload()" severity="secondary" />
 <p-splitter [panelSizes]="[25, 65, 10]" [style]="{ height: '100vh' }" class="mb-8">
          <ng-template #panel [stateKey]="'panel1'">
       <div class="flex flex-col items-center justify-center h-full gap-2">
