--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -67,14 +67,25 @@
       <p-splitter layout="vertical" [panelSizes]="[50, 50]">
         <ng-template #panel [stateKey]="'panel2-top'">
                   <!-- 上半部內容 -->
-          <div class="flex flex-col items-center justify-center h-full gap-2">
-      </div>
+          <div class="flex flex-col items-center justify-center h-full w-full">
+            <ng-container *ngIf="(selectedContract?.url ?? '').endsWith('.pdf'); else noPdf">
+              <iframe
+                [attr.src]="selectedContract?.url || ''"
+                width="100%"
+                height="500"
+                style="border: none;"
+              ></iframe>
+            </ng-container>
+            <ng-template #noPdf>
+              <div class="text-gray-500">請選擇有 PDF 檔案的合約</div>
+            </ng-template>
+          </div>
+        </ng-template>
+        <ng-template #panel [stateKey]="'panel2-bottom'">
+              <!-- 下半部內容（可留空或自訂） -->
+        </ng-template>
+      </p-splitter>
     </ng-template>
-    <ng-template #panel [stateKey]="'panel2-bottom'">
-              <!-- 下半部內容 -->
-    </ng-template>
-  </p-splitter>
-</ng-template>
   <!-- Panel 3: 右側，單一區 -->
     <ng-template #panel [stateKey]="'panel3'">
       <div class="flex flex-col items-center justify-center h-full gap-2 w-full">
