--- a/src/app/components/contract/contract.component.scss
+++ b/src/app/components/contract/contract.component.scss
@@ -7,3 +7,29 @@
   width: 100%;
   height: 100%;
 }
+
+:host ::ng-deep .p-datatable {
+  .p-datatable-tbody > tr {
+    transition: background-color 0.15s;
+    
+    &:hover {
+      background-color: #f9fafb !important;
+    }
+    
+    &.p-highlight {
+      background-color: #dbeafe !important;
+    }
+    
+    td {
+      padding: 0.5rem !important;
+      border-bottom: 1px solid #e5e7eb;
+    }
+  }
+  
+  .p-datatable-thead > tr > th {
+    background-color: #f3f4f6;
+    padding: 0.5rem !important;
+    font-weight: 600;
+    border-bottom: 2px solid #d1d5db;
+  }
+}
