--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -17,7 +17,7 @@
             <tr>
               <th>編號</th>
               <th>狀態</th>
-              <th>訂單號</th>
+              <th>訂單編號</th>
               <th>專案編號</th>
               <th>工程名稱</th>
               <th>合約金額</th>
