--- a/src/app/components/contract/stepbutton/request/request.component.html
+++ b/src/app/components/contract/stepbutton/request/request.component.html
@@ -1,14 +1,6 @@
-<form (ngSubmit)="submit()" class="flex flex-col gap-4">
-  <div class="flex gap-4">
-    <label>申請金額
-      <input pInputText type="number" [(ngModel)]="amount" name="amount" required (ngModelChange)="onAmountChange($event)" />
-    </label>
-    <label>百分比
-      <input pInputText type="number" [(ngModel)]="percent" name="percent" required min="0" max="100" (ngModelChange)="onPercentChange($event)" />
-    </label>
-  </div>
-  <label>備註
-    <input pInputText [(ngModel)]="note" name="note" />
-  </label>
-  <button pButton type="submit" label="送出" [disabled]="!amount || !percent"></button>
-</form> 
+<div class="request-container">
+  <h2>Submit a Request</h2>
+  <button (click)="submitRequest()" [disabled]="requestInProgress">
+    {{ requestInProgress ? 'Submitting...' : 'Submit Request' }}
+  </button>
+</div>
